BE/error/src/main/java/com/example/demo/common/support/AbstractModel.java
package com.example.demo.common.support;

public interface AbstractModel {}
